--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "bagaichadharan",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "prisma": {
+    "seed": "node --loader ts-node/esm prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -45,6 +49,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.15.1",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
