--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/prisma-adapter": "^2.3.0",
     "@hookform/resolvers": "^3.6.0",
     "@prisma/client": "^5.15.1",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.0",
     "@radix-ui/react-icons": "^1.3.0",
